--- a/css/index.css
+++ b/css/index.css
@@ -92,16 +92,16 @@ li {
     background-color: #707070;
 }
 .grow {
-    transition: ease-in;
+    display: none;
     z-index: 999;
     position: absolute;
     top: 140px;
     left: 370px;
     width: 770px;
     height: 120px;
+    background-color: transparent;
 }
 .grow h3 {
-    transition: ease-in;
     color: #FFFFFF;
     text-align: center;
     font-size: 60px;
@@ -110,7 +110,6 @@ li {
     font-weight: 700;
     margin-bottom: 20px;
 }
-
 .wrap .grow p {
     text-align: center;
     color: #FFFFFF;
@@ -126,7 +125,6 @@ li {
     margin:  90px  auto;
 }
 .bussiness p {
-
     display: inline-block;
     float: left;
     color: #222222;
@@ -172,22 +170,17 @@ li {
     text-rendering: optimizeLegibility;
 }
 .bussiness:hover a {
-    display: block;
+    display: inline-block;
 }
 .bussiness p a {
-
     width: 350px;
+    position: absolute;
     display: none;
     color: #646464;
     line-height: 24px;
     font-size: 16px;
     font-family: lato, sans-serif;
     font-weight: 400;
-}
-.bussiness p a:nth-child(3) {
-    position: absolute;
-    top: 21px;
-    left: 0;
 }
 .konw {
     position: relative;
